# floki

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  justfile  scratch_copy.rs  scratch_fast_copy.rs  scratch_test.rs  tests_lut.rs
.cargo/: config.toml
.github/workflows/: build.yml
assets/: test.cube
assets/perf/: README.md
benches/: exr_load.rs
docs/: audit-2026-06.md  lint-review-2026-06-19.md
docs/playback/: README.md  concurrency-contract.md  hardening-plan.md  memory-contract.md  sequence-playback.md  soak-checklist.md
docs/review-player/: README.md  layer-model.md
floki-ocio/: Cargo.toml  README.md  build.rs
floki-ocio/cpp/: .clang-format  shim.cpp  shim.h
floki-ocio/src/: backend.rs  error.rs  ffi.rs  lib.rs  transpile.rs
floki-ocio/tests/: api.rs
src/: annotation.rs  app.rs  background.rs  budget.rs  cache.rs  exr_loader.rs  gradient.rs  layer.rs  lib.rs  main.rs  playback.rs  proxy.rs  render_math.rs  render_program.rs  resource_monitor.rs  scheduler.rs  sequence.rs  snapshot.rs  tools.rs  viewer.rs
src/color/: cube.rs
src/gpu/: mod.rs  ocio_pass.rs  resources.rs  shader.wgsl  thumbnail.rs
