[package]
name = "floki"
version = "1.4.4"
edition = "2024"

[workspace]
members = [".", "floki-ocio"]

[features]
default = []
# OpenColorIO support, linking an installed OCIO (Homebrew / OPENCOLORIO_ROOT).
# This is the dev default — fast, no cmake. Off by default so the standard build
# needs no C++ toolchain.
ocio = ["dep:floki-ocio", "floki-ocio/system-ocio"]
# Distributable build: the same app OCIO support, but with OCIO statically built
# from the vendored submodule (cmake) so the binary is self-contained. Enables
# `ocio` for the app code; the vendored backend takes precedence over system-ocio
# in floki-ocio/build.rs. Heavy first build; needs cmake/ninja/python + a C++ compiler.
ocio-vendored = ["ocio", "floki-ocio/vendored-ocio"]

[dependencies]
# Backend selected via the root `ocio` / `ocio-vendored` features above.
floki-ocio = { path = "floki-ocio", optional = true }
eframe = { version = "0.34.3", features = ["persistence", "wgpu"] }
egui = "0.34.3"
serde = { version = "1.0", features = ["derive"] }
egui_extras = { version = "0.34.3", features = ["image", "all_loaders"] }
env_logger = "0.11.10"
exr = "1.74.0"
log = "0.4.30"
rfd = "0.17.2"
smallvec = "1.15.1"
bytemuck = { version = "1.16", features = ["derive"] }
rayon = "1.12.0"

[dev-dependencies]
tempfile = "3"          # scoped temp dirs/files for test fixtures (auto-cleanup)
egui_kittest = "0.34"   # headless egui interaction harness (no wgpu/snapshot feature)
approx = "0.5"          # float-tolerant assertions for color math
pollster = "0.4"        # block on wgpu async in headless GPU tests

# Patched exr: decompresses ZIP/PXR24 via miniz_oxide instead of zune-inflate,
# which panics (and aborts the app via a rayon worker) on some valid files.
# See https://github.com/byvfx/exrs/tree/miniz-inflate
[patch.crates-io]
exr = { git = "https://github.com/byvfx/exrs", branch = "miniz-inflate" }
