[package]
name = "floki"
version = "1.8.0"
edition = "2024"
# The app binary. Without this, `cargo run` is ambiguous because src/bin/ also has
# the convert_dir/inspect_exr/check_types helper bins (so `cargo run`, `cargo ocio-run`,
# etc. would error asking for --bin).
default-run = "floki"

[workspace]
members = [".", "floki-ocio"]

[features]
# OCIO is mandatory — it is always compiled. These features only select the
# native backend (mutually exclusive — vendored wins in floki-ocio/build.rs).
default = ["system-ocio"]
# Dev default: link an installed OCIO (Homebrew / OPENCOLORIO_ROOT). Fast; avoids
# the vendored OCIO cmake build, but still requires a C++ toolchain for floki-ocio's shim/shaderc.
system-ocio = ["floki-ocio/system-ocio"]
# Distributable build: OCIO statically built from the vendored submodule (cmake)
# so the binary is self-contained. Use with `--no-default-features` to avoid
# also pulling system-ocio. Heavy first build; needs cmake/ninja/python + a C++
# compiler. Release builds use this.
vendored = ["floki-ocio/vendored-ocio"]

[dependencies]
# OCIO is non-optional; backend selected via the `system-ocio` / `vendored`
# features above.
floki-ocio = { path = "floki-ocio" }
eframe = { version = "0.34.3", features = ["persistence", "wgpu"] }
egui = "0.34.3"
serde = { version = "1.0", features = ["derive"] }
egui_extras = { version = "0.34.3", features = ["image", "all_loaders"] }
env_logger = "0.11.10"
exr = "1.74.0"
log = "0.4.30"
rfd = "0.17.2"
smallvec = "1.15.1"
bytemuck = { version = "1.16", features = ["derive"] }
rayon = "1.12.0"
# Snapshot to clipboard (#19): arboard sets clipboard image data; image encodes the
# saved PNG; home resolves ~/.floki/snapshots. All three are already resolved in
# Cargo.lock (transitive), pinned here for direct use.
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["png"] }
home = "0.5"
# Bottom-bar resource monitor (#51): system + per-process memory. Default features off so
# we only pull the memory/process collectors, not disk/network/components/users.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"          # scoped temp dirs/files for test fixtures (auto-cleanup)
egui_kittest = "0.34"   # headless egui interaction harness (no wgpu/snapshot feature)
approx = "0.5"          # float-tolerant assertions for color math
pollster = "0.4"        # block on wgpu async in headless GPU tests
criterion = "0.5"       # statistical benchmark harness (benches/)

# Native global-cursor query for drag-and-drop A/B routing: winit discards the
# drop position, so we read the OS cursor directly (see `global_cursor_pos_px`
# in src/app.rs). Versions match what's already resolved in Cargo.lock.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
# Per-app GPU memory for the resource monitor (#51): read the wgpu Metal device's
# currentAllocatedSize / recommendedMaxWorkingSetSize via the MTLDevice protocol.
# Version matches wgpu-hal's transitive objc2-metal in Cargo.lock.
objc2-metal = { version = "0.3", default-features = false, features = ["MTLDevice"] }

# EXR decode + logical-layer grouping benchmark (the `ExrData::load` hot path).
# Runs synthetic fixtures everywhere; also benches real renders dropped into
# `assets/perf/` (or $FLOKI_PERF_FIXTURES) — see assets/perf/README.md.
[[bench]]
name = "exr_load"
harness = false

# Patched exr: decompresses ZIP/PXR24 via miniz_oxide instead of zune-inflate,
# which panics (and aborts the app via a rayon worker) on some valid files.
# See https://github.com/byvfx/exrs/tree/miniz-inflate
[patch.crates-io]
exr = { git = "https://github.com/byvfx/exrs", branch = "miniz-inflate" }
