[package]
name = "floki-ocio"
version = "0.1.0"
edition = "2024"
description = "UI/graphics-agnostic OpenColorIO (OCIO v2) bindings: config enumeration, CPU processing, and GPU shader bundle generation. Consumed by floki and the USD scene assembler."
license = "MIT OR Apache-2.0"

[features]
# No backend by default: the crate compiles to pure-Rust stubs whose OCIO calls
# return OcioError::NotCompiled. This keeps `cargo build` green with no C++
# toolchain. Turn on exactly one backend to link a real OCIO.
default = []

# Build OCIO from the vendored git submodule via cmake in build.rs (reproducible,
# self-contained). Heavy first build.
vendored-ocio = ["_native", "dep:cmake"]

# Link an externally-provided OCIO (e.g. the one the USD assembler already builds),
# located via OPENCOLORIO_ROOT or Homebrew. Avoids two OCIO copies in one process.
system-ocio = ["_native"]

# Internal: shared by both backends. Pulls in the cxx FFI toolchain plus the GLSL->SPIR-V
# transpile (shaderc) and SPIR-V reflection / WGSL emission (naga).
_native = ["dep:cxx", "dep:cxx-build", "dep:shaderc", "dep:naga"]

[dependencies]
thiserror = "2.0"
cxx = { version = "1.0", optional = true }
shaderc = { version = "0.10", optional = true }                       # GLSL -> SPIR-V (glslang)
# naga 29 matches floki's wgpu 29, so its validation faithfully predicts wgpu acceptance.
naga = { version = "29", optional = true, features = ["spv-in", "wgsl-out"] }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }
cmake = { version = "0.1", optional = true }

[dev-dependencies]
approx = "0.5"
